Remove unused code

--- a/Source/RawParser/project.lock.json
+++ b/Source/RawParser/project.lock.json
@@ -22392,6 +22392,6 @@
   "tools": {},
   "projectFileToolGroups": {},
   "packageFolders": {
-    "C:\\Users\\Francois\\.nuget\\packages\\": {}
+    "C:\\Users\\franc\\.nuget\\packages\\": {}
   }
 }
